<resources>
    <string name="app_name">Propositum</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">LOGIN</string>
    <string name="dont_have_account">¿No tienes cuenta?,</string>
    <string name="create_here">crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre y Apellido</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_create_account">Crear Cuenta</string>
    <string name="toolbar_title_createaccount">Crear Cuenta</string>
    <string name="tab_advisors">Asesores</string>
    <string name="tab_profile">Perfil</string>
    <string name="tab_request">Solicitud</string>
    <!-- <string name="hello_blank_fragment">Hello blank fragment</string> -->
    <string name="toolbar_title_advisories">Crear Anuncio</string>
    <string name="hint_specialtyAdvisories">Especialidad</string>
    <string name="hint_description_advisories">Descripción Anuncio</string>
    <string name="hint_price_advisories">Precio</string>
    <string name="hint_availability_advisories">Disponibilidad Asesor</string>
    <string name="text_button_publish_advisories">Publicar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="especialidad">Especialidad</string>
    <string name="correo">Correo</string>
    <string name="nivel_academico">Nivel Academico</string>
    <string name="button">Crear Proyecto</string>
    <string name="descripcion">Descripcion</string>
    <string name="telefono">Telefono</string>
    <string name="username_card">asesor1</string>
    <string name="secondword_detail">Ejemplo de carrera y datos principales</string>
    <string name="titleimagedetail">Magister Detalles</string>
    <string name="informationadvisors">Persona con experiencia mas de 2 años de asesoria para titulaciones profesionales, seriedad y resposabilidad con horarios que se amueldan a los tuyos. Entre mis asesorias estan alumnos de la UPC y USIL</string>
    <string name="transitionname_advisors">transitionnameadvisors</string>
    <string name="firstword_card">Descripcion:</string>
    <string name="detail2card_card">Magister</string>
</resources>
