<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <include layout="@layout/actionbar_toolbar"/>

    <!-- TODO: Update blank fragment layout -->



    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="60dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="114dp"
            android:layout_height="100dp"
            app:srcCompat="@mipmap/ic_launcher"
            tools:ignore="MissingConstraints"
            android:contentDescription=""
            android:layout_marginLeft="29dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="77dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="163dp"
            android:layout_height="48dp"
            android:text="@string/button"
            android:contentDescription=""
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/imageView"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="109dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/editTextColorWhite" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/nivel_academico"
            android:inputType="textMultiLine"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/especialidad"
            android:inputType="textEmailAddress"
            android:contentDescription=""
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.143"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/telefono"
            android:contentDescription=""
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.156"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="205dp" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/descripcion"
            android:contentDescription=""
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="82dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText5"
            app:layout_constraintVertical_bias="0.4" />
        <EditText
            android:id="@+id/editText5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/correo"
            android:contentDescription=""
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
